                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 16-05-2005 added: SF patch [1200420] support for multiple info items and localized strings in a single label control, thanks to desertbear
                     use $INFO(<info manager string>) and $LOCALIZE(<string id>)
                     example: <label>$LOCALIZE(171) $INFO(MusicPlayer.Artist)</label>
 - 16-05-2005 fixed: IP Adress in System Info was shown false!
 - 16-05-2005 fixed: backwards seeking for dvd player
 - 16-05-2005 added: SF patch [1198898] Del File Context item added to Videos - thanks to deadken
 - 16-05-2005 fixed: dvdplayer would be very jumpy after a seek (somewhat better now)
 - 16-05-2005 fixed: playtime and totaltime were reported wrongly in dvdplayer
 - 16-05-2005 fixed: Empty tags in skins crash.
 - 16-05-2005 fix: minor fix for possible overflows in clock sync handling (dvdplayer)
 - 15-05-2005 changed: Milkdrop now default visualization
 - 15-05-2005 added: filelist caching in Music->Library
 - 15-05-2005 fixed: HttpApi playfile command - not sure when it had become broken
 - 15-05-2005 added: option to retrieve file date in HttpApi GetDirectory command
 - 15-05-2005 fixed: TTF fonts could show bits of other characters under the current chars.
 - 15-05-2005 fixed: APEv2 tag reader also read + prioritized ID3v1 tags if the APEv2 tags weren't complete.
 - 15-05-2005 improved: Ringbuffer code.
 - 15-05-2005 added: Milkdrop, ported by MrC, (some) presets included and FATX renamed
 - 14-05-2005 changed: Performance enhancements to My Programs (requires new database to be created which will be slow initially when entering bookmarks)